# vlbi_calculator

./: .readthedocs.yml  404.html  AUDIT_REPORT.md  CHANGES.txt  LICENSE  MANIFEST.in  Procfile  README.md  app.py  dash_main.py  html_template.py  index.html  index.py  mkdocs.yml  objects.inv  plot_functions.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  sources.py  station_location.txt  stations.py  style.css  util_functions.py
.github/workflows/: python-app.yml
about/: index.html
api/: index.html
api/observation/: index.html
api/scheduler/: index.html
api/sources/: index.html
api/stations/: index.html
assets/: mixpanel-analytics.js  style.css  style.css.old
assets/css/custom/: _variables.scss
assets/css/free/: _variables.scss
assets/waves-Xcm.pxd/: metadata.info
assets/waves-Xcm.pxd/QuickLook/: Icon.tiff  Thumbnail.tiff
assets/waves-Xcm.pxd/data/: 53D0E6F3-6FEC-45CC-A662-0B860B3C203A  5D3082E7-1C37-4B6A-8E86-2C53DC072ADB  728A9575-F5C1-4091-B704-9CAA28AB268F  78C2E972-A08A-4E64-ADA7-4BCB1103EB18  7FD913AD-1E5C-4906-953C-C13EA4A674FC  B594D879-B3B6-4CFD-9257-9BA656552770  B788A4A2-43B9-48D4-9EA7-A5BE3C07EB34  originalImportedContentDocumentInfo
cli/: index.html
data/: network_catalog.inp  rfc_2021c_cat.txt  station_location.txt  stations_catalog.inp  style_bootstrap_ori.css
doc/: doc-antennas.md  doc-contact.md  doc-estimations.md  documentation.md  notes.md
docs/: about.md  cli.md  fringefinder.md  index.md  installation.md  license.md  mode-observe.md  mode-server.md  mode-source.md  phasecal.md  quickstart.md  release-notes.md  requirements.txt  scheduling.md  tutorial.md
docs/api/: index.md  observation.md  scheduler.md  sources.md  stations.md
fringefinder/: index.html
installation/: index.html
license/: index.html
mode-observe/: index.html
mode-server/: index.html
mode-source/: index.html
phasecal/: index.html
quickstart/: index.html
release-notes/: index.html
scheduling/: index.html
search/: search_index.json
site/: 404.html  conf.py  index.html  index.rst  sitemap.xml
src/: Checkbox.py  freqsetups.py  functions.py  graphical_elements.py  observation.py  stations.py
src/vlbiplanobs/: __init__.py  calibrators.py  cli.py  cli_obs.py  constraints.py  freqsetups.py  graphical_elements.py  observation.py  rfc.py  scheduler.py  sources.py  stations.py
src/vlbiplanobs/data/: key_file.key.template  network_catalog.inp  stations_catalog.inp
src/vlbiplanobs/gui/: callbacks.py  inputs.py  layout.py  main.py  main_real.py  outputs.py  plots.py
test/: test.py
tests/: dummy_obs.py  speed_tests.py  test.py  test_calibrators.py  test_catalogs.py  test_cli.py  test_observation.py  test_sources.py  test_stations.py
tutorial/: index.html
vlbiplanobs/: Checkbox.py  __init__.py  constraints.py  freqsetups.py  functions.py  graphical_elements.py  observation.py  stations.py  temp_import_pysched.py
(+18 files in other folders)
