[tool.pytest.ini_options]
pythonpath = "src"


[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "vlbiplanobs"
version = "3.0a13"
description = "Observaiton Planner for VLBI observations"
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["astronomy", "astrophysics", "cosmology", "radio", "science", "observations", "planner", "coordinate"]

authors = [
    { name = "B. Marcote", email = "marcote@jive.eu" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3 :: Only"
]

dependencies = [
    "numpy",
    "astropy>=4.0.2",
    "astroplan>=0.7",
    "rich",
    "rich_argparse",
    "plotext",
    "matplotlib",
    "ortools",
    "plotly",
    "dash"
]


[project.urls]
"Bug Reports" = "https://github.com/bmarcote/vlbi_calculator/issues"
"Source" = "https://github.com/bmarcote/vlbi_calculator/"


[tool.setuptools]
include-package-data = true


[tool.setuptools.package-data]
"vlbiplanobs.data" = ["data/*"]
"stations" = ["data/stations_catalog.inp"]
"networks" = ["data/network_catalog.inp"]
"vlbiplanobs.gui.assets" = ["gui/assets/*"]


[project.scripts]
planobs = "vlbiplanobs.cli:cli"

